--- a/idex.html
+++ b/idex.html
@@ -6,7 +6,10 @@
     <title>recetas</title>
 </head>
 <body>
-    <h1>Odin Recetas</h1>
-    <a href="pizza.html">Receta para pizza</a>
+    <h1>Las Mejores recetas</h1>
+    <strong><a href="pizza.html">Receta para pizza</a></strong>
+    <p><img src="descarga.jpeg"></p>
+    <strong><a href="hamburguesa.html">Receta para hamburguesas</a></strong>
+    <p><img src="h.jpg"></p>
 </body>
 </html>
