agregamos ultim receta

--- a/idex.html
+++ b/idex.html
@@ -7,9 +7,16 @@
 </head>
 <body>
     <h1>Las Mejores recetas</h1>
-    <strong><a href="pizza.html">Receta para pizza</a></strong>
-    <p><img src="descarga.jpeg"></p>
-    <strong><a href="hamburguesa.html">Receta para hamburguesas</a></strong>
-    <p><img src="h.jpg"></p>
+
+     <ul>
+        <li><strong><a href="pizza.html">Receta para pizza</a></strong>
+            <p><img src="descarga.jpeg"></p></li>
+        <li><strong><a href="hamburguesa.html">Receta para hamburguesas</a></strong>
+            <p><img src="h.jpg"></p></li>
+        <li><strong><a href="secreto.html">Receta secreta</a></strong><p><img src="q.png"</p>
+        </li>
+        
+     </ul>
+    
 </body>
 </html>
